--- a/cest-nous/src/sass/layout/header.scss
+++ b/cest-nous/src/sass/layout/header.scss
@@ -6,7 +6,7 @@
     justify-content: space-around; 
     transition: top 0.3s;
     position: relative;
-    width: 65%;
+    // width: 80%;
 }
 
 .navigation__logo {
