--- a/cest-nous/src/sass/main.scss
+++ b/cest-nous/src/sass/main.scss
@@ -1,3 +1,4 @@
 @import "./layout/header";
 @import "./layout/footer";
-@import "./pages/accueil"
+@import "./pages/accueil";
+@import "./pages/contact";
