--- a/cest-nous/src/sass/pages/accueil.scss
+++ b/cest-nous/src/sass/pages/accueil.scss
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .home {
     display: flex;
     flex-direction: column;
@@ -30,6 +34,8 @@
     
 }
 
+
+
 .missionb {
     margin-bottom: 100px;
 }
@@ -56,6 +62,7 @@
     font-size: 32px;
     text-transform: uppercase;
     font-weight: bold;
+    
 }
 .mission__block, .temoignages__block {
     padding: 20px;
@@ -68,7 +75,7 @@
 }
 
 .mission__text {
-    font-size: 22px;
+    font-size: 23px;
     font-weight: 100;
     align-items: center;
     
