--- a/cest-nous/src/sass/main.scss
+++ b/cest-nous/src/sass/main.scss
@@ -2,3 +2,8 @@
 @import "./layout/footer";
 @import "./pages/accueil";
 @import "./pages/contact";
+@import "./pages/apropos";
+@import "./pages/ateliers";
+@import "./pages/benevoles";
+@import "./pages/partenaires";
+@import "./pages/actualites";
