--- a/cest-nous/src/sass/pages/accueil.scss
+++ b/cest-nous/src/sass/pages/accueil.scss
@@ -30,8 +30,7 @@ body {
     padding: 20px;
     color: white; /* Couleur du texte */
     text-transform: uppercase;
-    font-size: 40px;
-    
+    font-size: 40px;    
 }
 
 
@@ -49,7 +48,6 @@ body {
     // margin: 0 auto;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .mission__img {
@@ -111,8 +109,7 @@ body {
     width: 95%;
     // margin: 0 auto;
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right: auto;    
 }
 
 .temoignages__text {
@@ -130,54 +127,43 @@ body {
     padding: 20px;
 
     margin-bottom: 100px;
-  }
+}
   
-  .atelier__block,
-  .partenaires__block,
-  .actualites__block {
+.atelier__block, .partenaires__block, .actualites__block {
     text-align: center;
     cursor: pointer;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 30px;
     text-decoration: none;
-  }
-  
-  .atelier__vignette,
-  .partenaires__vignette,
-  .actualites__vignette {
-    width: 200px; /* Ajustez la largeur selon vos besoins */
-    height: 200px;
-  }
-  
-  .atelier__titre,
-  .partenaires__titre,
-  .actualites__titre {
+}
+
+.atelier__vignette,  .partenaires__vignette,  .actualites__vignette {
+  width: 200px;
+  height: 200px;
+}
+
+.atelier__titre,  .partenaires__titre,  .actualites__titre {
     margin-top: 10px;
     font-size: 30px;
     font-weight: bold;
-    color: black; 
-    background-color: white; /* Ajout du fond blanc */
-    border-radius: 28px; /* Border-radius pour arrondir les coins */
-    padding: 20px; /* Ajout de rembourrage pour l'espace entre le texte et le bord */
-    border-bottom: 2px solid #ddd;
-    
-    
-  }
-
-  .partenaires__titre {
-    padding-left: 30px;
-    padding-right: 30px;
+    color: black;
+    background-color: white;
+    border-radius: 28px;
     padding: 20px;
-  }
-  
-  .atelier__block:hover,
-  .partenaires__block:hover,
-  .actualites__block:hover {
-    transform: scale(1.1); /* Ajustez la mise à l'échelle selon vos besoins */
-    transition: transform 0.3s ease; /* Durée de l'animation */
-  }
+    border-bottom: 2px solid #ddd;
+}
 
+.partenaires__titre {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding: 20px;
+}
+
+.atelier__block:hover,  .partenaires__block:hover,  .actualites__block:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
   
   
   
