--- a/cest-nous/src/sass/pages/partenaires.scss
+++ b/cest-nous/src/sass/pages/partenaires.scss
@@ -1,58 +1,75 @@
 .partenaires__b {
-    width: 80%;
-    margin: auto;
-    text-align: left;
-    margin-bottom: 50px;
-  }
-  
-  .partenaires__t {
-    font-size: 2em;
-  }
-  
-  .partenaires__text {
-    margin-bottom: 20px;
-    font-size: 20px;
+  width: 80%;
+  margin: auto;
+  text-align: left;
+  margin-bottom: 50px;
+}
+
+.partenaires__t {
+  font-size: 2em;
+}
+
+.partenaires__text {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.partenaires__titreb {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 70px;
+  margin-bottom: 60px;
+}
+
+.partenaires__vig,
+.partenaires__vign {
+  max-width: 100px;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.partenaires__button {
+  width: 220px;
+  margin-bottom: 60px;
+  background-color: #fb6472;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+  font-size: 25px;
+  cursor: pointer;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.partenaires__button:hover {
+  background-color: #5e829b;
+}
+
+.linkp {
+  text-decoration: none;
+}
+
+/* Styles pour les téléphones */
+@media screen and (max-width: 480px) {
+  .partenaires__b {
+    width: 90%;
   }
 
-  .partenaires__titreb {
-    text-align: center;
-    font-size: 25px;
-    margin-top: 70px;
-    margin-bottom: 60px;
-  }
-  
-  .partenaires__vig,
-  .partenaires__vign {
-    max-width: 100px; 
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
   .partenaires__button {
-    width: 220px;
-    margin-bottom: 60px;
-    background-color: #fb6472;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    margin-top: 30px;
-    font-size: 25px;
-    cursor: pointer;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
   }
-  
-  .partenaires__button:hover {
-    background-color: #5e829b;
-  }
+}
 
-  .linkp {
-    text-decoration: none;
+/* Styles pour les tablettes */
+@media screen and (max-width: 768px) {
+  .partenaires__b {
+    width: 70%;
   }
-  
+}
