--- a/cest-nous/src/sass/pages/ateliers.scss
+++ b/cest-nous/src/sass/pages/ateliers.scss
@@ -33,7 +33,7 @@
 }
 
 .ateliers__back {
-  background-color: #fb6472;
+  // background-color: #fb6472;
   text-align: justify;
   padding: 20px;
   margin-bottom: 100px;
@@ -48,7 +48,7 @@
 }
 
 .ateliers__titreb {
-  background-color: #fb6472;
+  // background-color: #fb6472;
   color: #fff;
   border-radius: 15px 15px 0 0;
   padding: 10px;
@@ -57,7 +57,7 @@
 }
 
 .ateliers__titrec {
-  background-color: #f65b6b;
+  // background-color: #f65b6b;
   color: #fff;
   border-radius: 0 0 15px 15px;
   padding: 10px;
