--- a/cest-nous/src/sass/pages/actualites.scss
+++ b/cest-nous/src/sass/pages/actualites.scss
@@ -68,8 +68,8 @@
 }
 
 .actualites__right {
-    flex-grow: 1; /* Permet au contenu de prendre tout l'espace disponible */
-    padding-left: 20px; /* Espace entre l'image et le texte, ajustez selon vos besoins */
+    flex-grow: 1; 
+    padding-left: 20px; 
 }
 
 .actualites__h2 {
@@ -81,6 +81,18 @@
     padding-top: 5px;
     padding-bottom: 5px;
     width: 150px;
+}
+
+.actualites__h2b {
+    background-color: #fb6472;
+    border-radius: 20px;
+    color: white;
+    font-size: 19px;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 180px;
+
 }
 
 .actualites__h4, .actualites__h5 {
